--- a/matlabtest.ipynb
+++ b/matlabtest.ipynb
@@ -6,7 +6,7 @@
       "name": "matlabtest.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOuNRvhE+hPDqrC/FXnHw+B",
+      "authorship_tag": "ABX9TyPRnY8+mKGA+4WEL+uM1VQC",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 295,
+      "execution_count": 461,
       "metadata": {
         "id": "ClWVuFaNyu0i"
       },
@@ -58,9 +58,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TAbwm8vQyzI4",
-        "outputId": "ecf3f2ae-4de7-4d2e-955e-1d026ee2b28a"
+        "outputId": "b11b8935-d8f0-482e-9ce2-4d0f162c61f0"
       },
-      "execution_count": 296,
+      "execution_count": 462,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,9 +125,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U-9XLEJ2y1Il",
-        "outputId": "9ae5f282-9b9e-4b05-b3e0-d58ea290f20e"
+        "outputId": "6b932ab6-9703-49db-cc64-639d4ac9e3ea"
       },
-      "execution_count": 297,
+      "execution_count": 463,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,9 +148,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GiccnDBOzV9N",
-        "outputId": "4a15df71-8875-483b-a8d6-370852d4311b"
+        "outputId": "80e7ab04-9051-4fd3-d8fc-f49ef2fd81df"
       },
-      "execution_count": 298,
+      "execution_count": 464,
       "outputs": [
         {
           "output_type": "stream",
@@ -176,9 +176,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BjU5cBQmzang",
-        "outputId": "f9bf04de-30d7-4bd3-956e-563f041fb25c"
+        "outputId": "1fbb72dd-0d42-4ba3-c2b3-73daab5dc568"
       },
-      "execution_count": 299,
+      "execution_count": 465,
       "outputs": [
         {
           "output_type": "stream",
@@ -206,9 +206,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oa5qeObfM1zv",
-        "outputId": "58ed3408-1ef0-4eb6-a5dd-ecb7f9f6694e"
+        "outputId": "ef492a45-8ab7-4ba9-bdd0-a1fbd2ceec2c"
       },
-      "execution_count": 300,
+      "execution_count": 466,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,9 +236,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xm-l3W-fNreJ",
-        "outputId": "68aaa577-4d68-45cb-d067-c78699b6f415"
+        "outputId": "fcb0242c-6710-41f3-fd8e-31d3b3235cce"
       },
-      "execution_count": 301,
+      "execution_count": 467,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,9 +264,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CdMeRHMxOADK",
-        "outputId": "7428dbd9-8905-44fc-c9ee-0812c49fab8b"
+        "outputId": "78724f0f-0589-4fa6-ecb8-b7323ac167a4"
       },
-      "execution_count": 302,
+      "execution_count": 468,
       "outputs": [
         {
           "output_type": "stream",
@@ -304,9 +304,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fB_OhkAxf-mk",
-        "outputId": "a4053062-cad0-4418-984f-ac40865ea087"
+        "outputId": "b698805c-ef82-4a83-e8e4-845bc9c55606"
       },
-      "execution_count": 303,
+      "execution_count": 469,
       "outputs": [
         {
           "output_type": "stream",
@@ -340,9 +340,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OApagEBG0SMS",
-        "outputId": "c460e210-9e24-46cc-bdfe-a72f9e010b38"
+        "outputId": "9497171d-e8ad-484e-e325-c8f2c8c217e7"
       },
-      "execution_count": 304,
+      "execution_count": 470,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,9 +363,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UuiHf1c80eFv",
-        "outputId": "cf14ac50-ccb3-4d4b-d0a6-4d41af446d4d"
+        "outputId": "cb691629-e0d1-4ee0-f348-d981579ee3df"
       },
-      "execution_count": 305,
+      "execution_count": 471,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,37 +376,37 @@
             "   0.723606797749975   0.447213595499956\n",
             "   0.447213595499956   0.276393202250020\n",
             "\n",
-            "Elapsed time is 0.027518 seconds.\n",
+            "Elapsed time is 0.028147 seconds.\n",
             "ans =\n",
             "\n",
             "   0.723606797749911   0.447213595499916\n",
             "   0.447213595499916   0.276393202249995\n",
             "\n",
-            "Elapsed time is 0.00292993 seconds.\n",
+            "Elapsed time is 0.00356197 seconds.\n",
             "ans =\n",
             "\n",
             "   0.723606797749932   0.447213595499929\n",
             "   0.447213595499929   0.276393202250003\n",
             "\n",
-            "Elapsed time is 0.000702143 seconds.\n",
+            "Elapsed time is 0.000883102 seconds.\n",
             "ans =\n",
             "\n",
             "   6.57518615256860e+212   4.06368852464505e+212\n",
             "   4.06368852464505e+212   2.51149762792355e+212\n",
             "\n",
-            "Elapsed time is 0.00245118 seconds.\n",
+            "Elapsed time is 0.0030601 seconds.\n",
             "ans =\n",
             "\n",
             "   6.57518615256860e+212   4.06368852464505e+212\n",
             "   4.06368852464505e+212   2.51149762792356e+212\n",
             "\n",
-            "Elapsed time is 0.000608921 seconds.\n",
+            "Elapsed time is 0.000849009 seconds.\n",
             "ans =\n",
             "\n",
             "   0.723606797749911   0.447213595499916\n",
             "   0.447213595499916   0.276393202249995\n",
             "\n",
-            "Elapsed time is 5.19753e-05 seconds.\n"
+            "Elapsed time is 8.89301e-05 seconds.\n"
           ]
         }
       ]
@@ -431,9 +431,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "238e3f5e-d6fe-4a71-8bd5-94f7314a4fcf"
+        "outputId": "4159d6c9-5059-4a66-930b-eaec8bb05142"
       },
-      "execution_count": 306,
+      "execution_count": 472,
       "outputs": [
         {
           "output_type": "stream",
@@ -464,9 +464,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WgpQlmYxzVID",
-        "outputId": "95128d19-29b4-4c42-c540-7ee1e69d2c72"
+        "outputId": "12574f7b-9822-4e8f-b728-559d88b3c92a"
       },
-      "execution_count": 307,
+      "execution_count": 473,
       "outputs": [
         {
           "output_type": "stream",
@@ -489,9 +489,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7FI39o7Gym1k",
-        "outputId": "fe9bc94f-3b87-4c1a-d117-304ee9c1980c"
+        "outputId": "a248279e-ff9e-4e04-80e3-ef94179a2798"
       },
-      "execution_count": 308,
+      "execution_count": 474,
       "outputs": [
         {
           "output_type": "stream",
@@ -512,9 +512,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BX0n9vBKycI2",
-        "outputId": "1ffcf4ed-5eb0-4511-f60d-234349f2468b"
+        "outputId": "fa0b4fba-808e-4f89-ed45-7dc7305ef654"
       },
-      "execution_count": 309,
+      "execution_count": 475,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,9 +537,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e8NEL-bVy0Pc",
-        "outputId": "de257183-f049-4961-f292-b4dfb41670c8"
+        "outputId": "c65b235b-b270-4584-c539-75088f3041ce"
       },
-      "execution_count": 310,
+      "execution_count": 476,
       "outputs": [
         {
           "output_type": "stream",
@@ -560,9 +560,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OH-02Y6N2kQs",
-        "outputId": "7a00abf3-74df-46c7-c8cf-c955869ff7bf"
+        "outputId": "b4f47f2b-4ef9-4992-e046-c93aa441ab79"
       },
-      "execution_count": 311,
+      "execution_count": 477,
       "outputs": [
         {
           "output_type": "stream",
@@ -585,9 +585,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TP3UuuM-3BMH",
-        "outputId": "ef1c2d1c-63a0-4a79-aaa5-53f1ea8fff3a"
+        "outputId": "05636b9c-b7e2-4181-8334-95eb4fe96de9"
       },
-      "execution_count": 312,
+      "execution_count": 478,
       "outputs": [
         {
           "output_type": "stream",
@@ -608,9 +608,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wrbq_kMM36Kc",
-        "outputId": "4e3ff283-68ab-43a6-f9b2-15ea99499d50"
+        "outputId": "c8572aae-bd4a-48e8-c287-7e0ea4ee1dd0"
       },
-      "execution_count": 313,
+      "execution_count": 479,
       "outputs": [
         {
           "output_type": "stream",
@@ -633,9 +633,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "D1B7Ahfi38bS",
-        "outputId": "33149aab-e922-4170-f494-b83b29c7d1da"
+        "outputId": "2f4c9dbd-ad90-4099-8c85-e5ceb6132c7b"
       },
-      "execution_count": 314,
+      "execution_count": 480,
       "outputs": [
         {
           "output_type": "stream",
@@ -656,9 +656,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Va6w0lrC4Dng",
-        "outputId": "5dd87575-e456-4e35-cb44-bf47564f40b2"
+        "outputId": "e467ba66-5548-4ca8-9289-450a0a20fc8b"
       },
-      "execution_count": 315,
+      "execution_count": 481,
       "outputs": [
         {
           "output_type": "stream",
@@ -672,12 +672,254 @@
     {
       "cell_type": "code",
       "source": [
+        "%%writefile runfib5.m\n",
+        "n = 5;\n",
+        "fibonacci_direct2edit(n)"
+      ],
+      "metadata": {
+        "id": "_1_tgHU24H_X",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "89be57f4-886a-4483-f52c-8b081931723a"
+      },
+      "execution_count": 482,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting runfib5.m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!octave -W runfib5.m"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hUPTZF2M_XI3",
+        "outputId": "defb2c55-d313-4985-bdfd-d8c681d17357"
+      },
+      "execution_count": 483,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ans =  0.39506\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile horner_recursive.m\n",
+        "function p = horner_recursive(a,x)\n",
+        "n = length(a) - 1;\n",
+        "if n == 0\n",
+        "  p = a(n + 1);\n",
+        "else\n",
+        "  p = horner_recursive(a(2:n+1),x).*x+a(1);\n",
+        "end"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ATvHNXxk_cmX",
+        "outputId": "a22a5414-65dc-430c-e79c-253599148fc0"
+      },
+      "execution_count": 484,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting horner_recursive.m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile runhr.m\n",
+        "format long\n",
+        "max_recursion_depth(1024)\n",
+        "a = [0,1./(1:1000).^2]; % a_0 = 0\n",
+        "x = [-1,-.5,.5,1];\n",
+        "tic, horner_recursive(a,x), toc"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CZfsUZtnOEOM",
+        "outputId": "3f5981a6-f4b7-4cea-a947-26b3a8aecd06"
+      },
+      "execution_count": 485,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting runhr.m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!octave -W runhr.m"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I0m8sK-dOwB7",
+        "outputId": "619a5841-2e5e-442d-b303-4e776340d5ed"
+      },
+      "execution_count": 486,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ans =\n",
+            "\n",
+            "  -0.822466533924113  -0.448414206923646   0.582240526465013   1.643934566681560\n",
+            "\n",
+            "Elapsed time is 0.038877 seconds.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile bisect.m\n",
+        "function ab = bisect(f,ab,tol,alfa)\n",
+        "a = ab(1); b = ab(2); % assumes a<b\n",
+        "if b-a<tol, return; end\n",
+        "fa = f(a); % assumes f(a)*f(b)<0\n",
+        "v = alfa;\n",
+        "if isinf(alfa), v = (1+2*rand)/4; end % random value in [0.25,0.75]\n",
+        "x = a+v*(b-a); fx = f(x);\n",
+        "if fx*fa < 0\n",
+        "  ab = [a,x];\n",
+        "else\n",
+        "  ab = [x,b];\n",
+        "end\n",
+        "ab = bisect(f,ab,tol,alfa);"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "x3fgwptUOzEv",
+        "outputId": "01bbfabd-0492-4275-9ccb-6740d9de50a3"
+      },
+      "execution_count": 487,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting bisect.m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%writefile runbisect.m\n",
+        "format long\n",
+        "f = @(x)x^3-2;\n",
+        "ab = [1,2]; % assumes fa*fb<0\n",
+        "tol = 1e-15;\n",
+        "tic, bisect(f,ab,tol,0.25), toc\n",
+        "tic, bisect(f,ab,tol,0.5), toc\n",
+        "tic, bisect(f,ab,tol,0.75), toc\n",
+        "tic, bisect(f,ab,tol,Inf), toc"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sfPrqExzV0ex",
+        "outputId": "702ec2f2-9b65-4f5b-d0c9-960d909965e1"
+      },
+      "execution_count": 488,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Overwriting runbisect.m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!octave -W runbisect.m"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tN3YCyRCY9CB",
+        "outputId": "2733e145-4f36-4b5d-9c5c-51b4d0750bce"
+      },
+      "execution_count": 489,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "ans =\n",
+            "\n",
+            "   1.25992104989487   1.25992104989487\n",
+            "\n",
+            "Elapsed time is 0.00484204 seconds.\n",
+            "ans =\n",
+            "\n",
+            "   1.25992104989487   1.25992104989487\n",
+            "\n",
+            "Elapsed time is 0.00378203 seconds.\n",
+            "ans =\n",
+            "\n",
+            "   1.25992104989487   1.25992104989487\n",
+            "\n",
+            "Elapsed time is 0.00747705 seconds.\n",
+            "ans =\n",
+            "\n",
+            "   1.25992104989487   1.25992104989487\n",
+            "\n",
+            "Elapsed time is 0.005373 seconds.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "_1_tgHU24H_X"
+        "id": "jIHr5kIBZXU4"
       },
-      "execution_count": 315,
+      "execution_count": 489,
       "outputs": []
     }
   ]
