--- a/HW9.ipynb
+++ b/HW9.ipynb
@@ -6,7 +6,7 @@
       "name": "HW9.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM9VFLIdXJw1sbDWn7TAAtS",
+      "authorship_tag": "ABX9TyMrSjawXEatMLD7079xe2Js",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": null,
       "metadata": {
         "id": "Q5FfQEgANdEg"
       },
@@ -42,7 +42,16 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Problem 1**"
+        "**HW9**"
+      ],
+      "metadata": {
+        "id": "oxLL4y71lBzo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "***Problem 1***"
       ],
       "metadata": {
         "id": "XZqBfBvgN_j3"
@@ -92,9 +101,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JAWF5knVOId8",
-        "outputId": "f8f1762b-c186-4ce4-ad41-e264a701e669"
+        "outputId": "520cb33d-529d-4d8b-f723-dc6f697ecde2"
       },
-      "execution_count": 89,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,13 +123,13 @@
       "metadata": {
         "id": "IfkyJovRRCHK"
       },
-      "execution_count": 89,
+      "execution_count": 1,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**Problem 2**"
+        "***Problem 2***"
       ],
       "metadata": {
         "id": "kQe5PFPETga8"
@@ -165,9 +174,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HTdXpQ9oTnBo",
-        "outputId": "ac38cb0c-0c7c-404a-ed73-c851b81f9123"
+        "outputId": "5e8bb458-beec-4393-ba01-cd451041e3c3"
       },
-      "execution_count": 90,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,13 +195,13 @@
       "metadata": {
         "id": "y7qjil90nNzY"
       },
-      "execution_count": 90,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "**Problem 3**"
+        "***Problem 3***"
       ],
       "metadata": {
         "id": "NZZnPidHpGNY"
@@ -215,7 +224,7 @@
       "metadata": {
         "id": "8UUDcRAxp8pM"
       },
-      "execution_count": 90,
+      "execution_count": 2,
       "outputs": []
     }
   ]
