--- a/HW10.ipynb
+++ b/HW10.ipynb
@@ -6,7 +6,7 @@
       "name": "HW10.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyME5R+vqhs5f9f62Q+3fqnc",
+      "authorship_tag": "ABX9TyN9jFibQttuFv1MYsZefHue",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 120,
       "metadata": {
         "id": "MTLlbVs3Jrtj"
       },
@@ -98,9 +98,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "BYPt3F5OJ1Za",
-        "outputId": "9a43017c-598b-4186-d4fb-b65ebf87e213"
+        "outputId": "5f2c9223-c58d-4ae6-a962-887bea059173"
       },
-      "execution_count": 45,
+      "execution_count": 121,
       "outputs": [
         {
           "output_type": "stream",
@@ -128,7 +128,7 @@
       "metadata": {
         "id": "be4CJSN9Mshv"
       },
-      "execution_count": 45,
+      "execution_count": 121,
       "outputs": []
     },
     {
@@ -148,12 +148,12 @@
         "import matplotlib.pyplot as plt\n",
         "\n",
         "def my_fourier_coef(f, n):\n",
-        "  def cos(x):\n",
+        "  def cosf(x):\n",
         "    return np.cos(n * x) * f(x)\n",
-        "  def sin(x):\n",
+        "  def sinf(x):\n",
         "    return np.sin(n * x) * f(x)\n",
-        "  A_n = quad(cos, -np.pi, np.pi)[0]\n",
-        "  B_n = quad(sin, -np.pi, np.pi)[0]\n",
+        "  A_n = quad(cosf, -np.pi, np.pi)[0]\n",
+        "  B_n = quad(sinf, -np.pi, np.pi)[0]\n",
         "  return [A_n / np.pi, B_n / np.pi]\n",
         "\n",
         "\n",
@@ -185,9 +185,9 @@
           "height": 404
         },
         "id": "DIgvVG8nS4_q",
-        "outputId": "09ece1cb-0044-44f8-d877-723a9f00d906"
+        "outputId": "12632161-0d50-4e51-e58a-b0d30decdcbb"
       },
-      "execution_count": 46,
+      "execution_count": 122,
       "outputs": [
         {
           "output_type": "display_data",
@@ -215,9 +215,9 @@
           "height": 404
         },
         "id": "mc6aoqdjWIpB",
-        "outputId": "95c93fc6-d8b6-4dbc-b4f4-e5c21812aced"
+        "outputId": "55b715b0-f03a-4465-96b0-e7b3e1b2205f"
       },
-      "execution_count": 47,
+      "execution_count": 123,
       "outputs": [
         {
           "output_type": "display_data",
@@ -246,9 +246,9 @@
           "height": 404
         },
         "id": "aK9C5jteVI6a",
-        "outputId": "45976849-5554-4775-b169-b77297746430"
+        "outputId": "5265dd46-0670-4ccb-c9f9-0b9b98d02543"
       },
-      "execution_count": 48,
+      "execution_count": 124,
       "outputs": [
         {
           "output_type": "display_data",
@@ -276,9 +276,9 @@
           "height": 404
         },
         "id": "RrVxCBwXVbOk",
-        "outputId": "712ced12-5753-4c63-f469-f5bcfd269994"
+        "outputId": "f73a3fbc-e866-40e3-aa9f-cb903b85099b"
       },
-      "execution_count": 49,
+      "execution_count": 125,
       "outputs": [
         {
           "output_type": "display_data",
@@ -307,9 +307,9 @@
           "height": 404
         },
         "id": "eSa-t8o4Vt4j",
-        "outputId": "4b7b8ae3-6493-4107-864c-df2adfbe3c24"
+        "outputId": "e10d6ab9-a149-4201-e8c0-d799c68c058b"
       },
-      "execution_count": 50,
+      "execution_count": 126,
       "outputs": [
         {
           "output_type": "display_data",
@@ -337,9 +337,9 @@
           "height": 404
         },
         "id": "syJeYddNVzOr",
-        "outputId": "df33863f-4f75-4508-f0e0-deaf04cd1ffe"
+        "outputId": "2abcfec7-0932-4add-bc2e-65c1f8fbe617"
       },
-      "execution_count": 51,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "display_data",
@@ -363,7 +363,7 @@
       "metadata": {
         "id": "JiHCtIVZV3AF"
       },
-      "execution_count": 51,
+      "execution_count": 127,
       "outputs": []
     }
   ]
