--- a/HW10.ipynb
+++ b/HW10.ipynb
@@ -6,7 +6,7 @@
       "name": "HW10.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPDtzr5pBL/M0l+QmxwvTwr",
+      "authorship_tag": "ABX9TyMarPtORalVqBsB0QALjo7q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 33,
       "metadata": {
         "id": "MTLlbVs3Jrtj"
       },
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "BYPt3F5OJ1Za"
       },
-      "execution_count": 24,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -108,9 +108,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fb578960-44cc-43b6-fef5-1f631f4390f8"
+        "outputId": "17e1092b-8219-4729-f8d7-e0897dca8071"
       },
-      "execution_count": 25,
+      "execution_count": 35,
       "outputs": [
         {
           "output_type": "stream",
@@ -126,6 +126,29 @@
             "2.961547346105437\n",
             "2.9256659293914926\n",
             "2.9253397355720656\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"test\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1epV5xMUae2O",
+        "outputId": "a5dfdc68-6533-435d-b310-26f8916ff95e"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "test\n"
           ]
         }
       ]
@@ -184,9 +207,9 @@
           "height": 404
         },
         "id": "DIgvVG8nS4_q",
-        "outputId": "20c7b488-8213-45a2-8266-ae9ea7a09377"
+        "outputId": "3100eb89-c3f7-45fa-f664-0025903fc339"
       },
-      "execution_count": 26,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "display_data",
@@ -214,9 +237,9 @@
           "height": 404
         },
         "id": "mc6aoqdjWIpB",
-        "outputId": "107f711f-5092-4f6a-85c1-be3d492e6a20"
+        "outputId": "3b558cb4-8d30-483c-f530-3c029a701ae6"
       },
-      "execution_count": 27,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "display_data",
@@ -245,9 +268,9 @@
           "height": 404
         },
         "id": "aK9C5jteVI6a",
-        "outputId": "11a2d8cd-9cd1-4a7e-ce2d-2a1586646fee"
+        "outputId": "1e4cca07-2534-4b66-d8dd-77ab017ebaec"
       },
-      "execution_count": 28,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "display_data",
@@ -275,9 +298,9 @@
           "height": 404
         },
         "id": "RrVxCBwXVbOk",
-        "outputId": "3b926f9f-034e-4cc7-9cd3-18c888fe8388"
+        "outputId": "ec333da1-ff7f-45f6-97d3-f188e94bc7d2"
       },
-      "execution_count": 29,
+      "execution_count": 40,
       "outputs": [
         {
           "output_type": "display_data",
@@ -306,9 +329,9 @@
           "height": 404
         },
         "id": "eSa-t8o4Vt4j",
-        "outputId": "99d829cb-ecb3-4081-e439-0e78ad2dc03d"
+        "outputId": "ccab9aac-c124-472a-d8c7-5c4172032e84"
       },
-      "execution_count": 30,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "display_data",
@@ -336,9 +359,9 @@
           "height": 404
         },
         "id": "syJeYddNVzOr",
-        "outputId": "baafa1eb-48cd-410d-a582-bf12d5c202ab"
+        "outputId": "413a7652-ce7e-46bc-8c63-9e2db3dbf14a"
       },
-      "execution_count": 31,
+      "execution_count": 42,
       "outputs": [
         {
           "output_type": "display_data",
@@ -362,7 +385,7 @@
       "metadata": {
         "id": "JiHCtIVZV3AF"
       },
-      "execution_count": 31,
+      "execution_count": 42,
       "outputs": []
     }
   ]
