--- a/testtest.ipynb
+++ b/testtest.ipynb
@@ -6,7 +6,7 @@
       "name": "testtest.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPBFD4ax4Yl/5E47O9wOKMK",
+      "authorship_tag": "ABX9TyNRsgaD8KHhhNn22IrIjbNY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vkBr8-L-azWt",
-        "outputId": "fb3259c5-809d-4a60-a72b-924aa892c7e2"
+        "outputId": "296a45a5-b112-4fb0-f4df-9f168b9ca521"
       },
       "outputs": [
         {
@@ -48,7 +48,7 @@
         }
       ],
       "source": [
-        "print(\"test\")"
+        "print(f'test')"
       ]
     },
     {
@@ -59,7 +59,7 @@
       "metadata": {
         "id": "Xz7nTOO9a1g_"
       },
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": []
     }
   ]
