--- a/testtest.ipynb
+++ b/testtest.ipynb
@@ -6,7 +6,7 @@
       "name": "testtest.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNRsgaD8KHhhNn22IrIjbNY",
+      "authorship_tag": "ABX9TyPvH1Qu43FhzAAEJGDno0tx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,13 +30,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "vkBr8-L-azWt",
-        "outputId": "296a45a5-b112-4fb0-f4df-9f168b9ca521"
+        "outputId": "04fd05f5-3d0d-425b-9cc2-6292a0c1101e"
       },
       "outputs": [
         {
@@ -48,7 +48,33 @@
         }
       ],
       "source": [
-        "print(f'test')"
+        "print('test')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "5+5"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Xz7nTOO9a1g_",
+        "outputId": "410634a1-45c3-421a-a9b0-a8eb68026a0f"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "10"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
       ]
     },
     {
@@ -57,9 +83,9 @@
         ""
       ],
       "metadata": {
-        "id": "Xz7nTOO9a1g_"
+        "id": "o9J_qcsTbwpt"
       },
-      "execution_count": 6,
+      "execution_count": 10,
       "outputs": []
     }
   ]
