--- a/HW10.ipynb
+++ b/HW10.ipynb
@@ -6,7 +6,7 @@
       "name": "HW10.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMarPtORalVqBsB0QALjo7q",
+      "authorship_tag": "ABX9TyP4C2NCkh39PDytT11BG9Lf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 52,
       "metadata": {
         "id": "MTLlbVs3Jrtj"
       },
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "BYPt3F5OJ1Za"
       },
-      "execution_count": 34,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -108,9 +108,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "17e1092b-8219-4729-f8d7-e0897dca8071"
+        "outputId": "b2329538-916f-48a8-ed0b-40fcbb42ccac"
       },
-      "execution_count": 35,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
@@ -133,22 +133,22 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"test\")"
+        "print(my_num_int(f, -1, 1, 100001, 'simp'))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1epV5xMUae2O",
-        "outputId": "a5dfdc68-6533-435d-b310-26f8916ff95e"
+        "outputId": "b9a58a69-e166-43b1-cd2d-e38a53dcc05a"
       },
-      "execution_count": 36,
+      "execution_count": 55,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "test\n"
+            "2.9253397355720656\n"
           ]
         }
       ]
@@ -207,9 +207,9 @@
           "height": 404
         },
         "id": "DIgvVG8nS4_q",
-        "outputId": "3100eb89-c3f7-45fa-f664-0025903fc339"
+        "outputId": "7e8b581d-a170-4e8f-d711-855ffc61aa8a"
       },
-      "execution_count": 37,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "display_data",
@@ -237,9 +237,9 @@
           "height": 404
         },
         "id": "mc6aoqdjWIpB",
-        "outputId": "3b558cb4-8d30-483c-f530-3c029a701ae6"
+        "outputId": "5d99c9b2-fe4e-4719-8ac8-bebb5e0c5177"
       },
-      "execution_count": 38,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "display_data",
@@ -268,9 +268,9 @@
           "height": 404
         },
         "id": "aK9C5jteVI6a",
-        "outputId": "1e4cca07-2534-4b66-d8dd-77ab017ebaec"
+        "outputId": "a5b16f18-d61c-4d1e-9258-af0a6e8843b1"
       },
-      "execution_count": 39,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "display_data",
@@ -298,9 +298,9 @@
           "height": 404
         },
         "id": "RrVxCBwXVbOk",
-        "outputId": "ec333da1-ff7f-45f6-97d3-f188e94bc7d2"
+        "outputId": "82f8e23f-c5dc-4f0c-f753-9b05397c9a7e"
       },
-      "execution_count": 40,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "display_data",
@@ -329,9 +329,9 @@
           "height": 404
         },
         "id": "eSa-t8o4Vt4j",
-        "outputId": "ccab9aac-c124-472a-d8c7-5c4172032e84"
+        "outputId": "bdb8c801-f477-4548-dd0d-33a45e26a846"
       },
-      "execution_count": 41,
+      "execution_count": 60,
       "outputs": [
         {
           "output_type": "display_data",
@@ -359,9 +359,9 @@
           "height": 404
         },
         "id": "syJeYddNVzOr",
-        "outputId": "413a7652-ce7e-46bc-8c63-9e2db3dbf14a"
+        "outputId": "56902a11-4e8e-4c5a-c464-99ca3043a1a7"
       },
-      "execution_count": 42,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "display_data",
@@ -385,7 +385,7 @@
       "metadata": {
         "id": "JiHCtIVZV3AF"
       },
-      "execution_count": 42,
+      "execution_count": 61,
       "outputs": []
     }
   ]
