--- a/HW10.ipynb
+++ b/HW10.ipynb
@@ -6,7 +6,7 @@
       "name": "HW10.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP4C2NCkh39PDytT11BG9Lf",
+      "authorship_tag": "ABX9TyNMO6FZNIyvY+hh8H5gUX1q",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 52,
+      "execution_count": 69,
       "metadata": {
         "id": "MTLlbVs3Jrtj"
       },
@@ -82,7 +82,7 @@
       "metadata": {
         "id": "BYPt3F5OJ1Za"
       },
-      "execution_count": 53,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -108,9 +108,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "b2329538-916f-48a8-ed0b-40fcbb42ccac"
+        "outputId": "96f47a88-0b74-48d1-e11c-2b413d6d0ba9"
       },
-      "execution_count": 54,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
@@ -131,27 +131,47 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "print(my_num_int(f, -1, 1, 100001, 'simp'))"
+        "*The output is as follows:*\n",
+        "\n",
+        "<br>\n",
+        "<br>\n",
+        "\n",
+        "for x^2:\n",
+        "\n",
+        "0.625\n",
+        "\n",
+        "0.375\n",
+        "\n",
+        "0.3333333333333333\n",
+        "\n",
+        "\n",
+        "<br>\n",
+        "\n",
+        "\n",
+        "for e^(x^2):\n",
+        "\n",
+        "2.961547346105437\n",
+        "\n",
+        "2.9256659293914926\n",
+        "\n",
+        "2.9253397355720656"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "1epV5xMUae2O",
-        "outputId": "b9a58a69-e166-43b1-cd2d-e38a53dcc05a"
+        "id": "CpGawq6Udal3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "1epV5xMUae2O"
       },
-      "execution_count": 55,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2.9253397355720656\n"
-          ]
-        }
-      ]
+      "execution_count": 71,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -207,9 +227,9 @@
           "height": 404
         },
         "id": "DIgvVG8nS4_q",
-        "outputId": "7e8b581d-a170-4e8f-d711-855ffc61aa8a"
+        "outputId": "7be01965-45ae-4cd2-e4a4-e77c2fbb7834"
       },
-      "execution_count": 56,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "display_data",
@@ -237,9 +257,9 @@
           "height": 404
         },
         "id": "mc6aoqdjWIpB",
-        "outputId": "5d99c9b2-fe4e-4719-8ac8-bebb5e0c5177"
+        "outputId": "77a27db5-c6db-4914-9c09-c0cc809b3d80"
       },
-      "execution_count": 57,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "display_data",
@@ -268,9 +288,9 @@
           "height": 404
         },
         "id": "aK9C5jteVI6a",
-        "outputId": "a5b16f18-d61c-4d1e-9258-af0a6e8843b1"
+        "outputId": "b5bc474e-894b-4f10-b978-0d7edb3bbc46"
       },
-      "execution_count": 58,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "display_data",
@@ -298,9 +318,9 @@
           "height": 404
         },
         "id": "RrVxCBwXVbOk",
-        "outputId": "82f8e23f-c5dc-4f0c-f753-9b05397c9a7e"
+        "outputId": "e1cd3d54-ca2a-4487-afdc-e4f7d78a2e8c"
       },
-      "execution_count": 59,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "display_data",
@@ -329,9 +349,9 @@
           "height": 404
         },
         "id": "eSa-t8o4Vt4j",
-        "outputId": "bdb8c801-f477-4548-dd0d-33a45e26a846"
+        "outputId": "ff366ce7-c651-4340-e9ec-0bfac368b0af"
       },
-      "execution_count": 60,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "display_data",
@@ -359,9 +379,9 @@
           "height": 404
         },
         "id": "syJeYddNVzOr",
-        "outputId": "56902a11-4e8e-4c5a-c464-99ca3043a1a7"
+        "outputId": "9fc8b273-6b6f-4186-ee89-6b4a68c6080e"
       },
-      "execution_count": 61,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "display_data",
@@ -385,7 +405,7 @@
       "metadata": {
         "id": "JiHCtIVZV3AF"
       },
-      "execution_count": 61,
+      "execution_count": 77,
       "outputs": []
     }
   ]
